# Advent-of-Code

./: .gitignore  README.md  __init__.py
2017/: README.md
2017/Day_12/: part_2.py
2017/Day_13/: part_2.py
2017/Day_14/: part_1.py
2017/Day_5/: part_2.py
2017/Day_7/: part_2.py
2017/Day_9/: part_2.py
2018/: README.md  test_utils.ex  utils.ex
2018/Day_01/: README.md  part_1.ex  part_1.exs  part_2.ex  part_2.exs  test.exs  test.sh
2018/Day_02/: README.md  part_1.exs  part_2.exs  test.sh
2018/Day_02/inputs/: test_input_3.txt
2018/Day_03/: README.md  part_1.exs  part_2.exs  utils.ex
2018/Day_04/: README.md  part_1.exs  part_2.exs  utils.ex
2018/Day_05/: README.md  part_1.exs  part_2.exs  utils.ex
2018/Day_05/inputs/: test_input_2.txt
2018/Day_06/: README.md
2018/Day_06/elixir/: mix.exs
2019/: README.md
2019/elixir_aoc/: .gitignore  README.md  mix.exs
2020/: build.gradle.kts  settings.gradle.kts
2022/: day1.py
2023/: Gemfile  day1.py  day2.rb  day3.py  day4.py  day5.py  day5.rb  day6.py  day7.rb  day8.py  day9.py  fetcher.py  pyproject.toml
2023/inputs/: day5.txt  day6_2.txt
2023/inputs/test/: day5-short.txt
Day-1/: inverse_captcha.py  part_1.py
Day-10/: part_1.py
Day-13/: part_1.py
Day-2/: part_1.py
Day-3/: part_1.py
Day-5/: part_1.py
Day-6/: part_1.py  part_2.py
Day-8/: part_1.py  part_2.py
Day-9/: part_1.py
Day_1/: part_2.py
Day_10/: part_2.py
Day_12/: part_1.py
Day_14/: part_1.py
Day_2/: part_2.py
Day_3/: part_1.py  part_2.py
Day_4/: part_1.py  part_2.py
Day_7/: part_1.py
(+71 files in other folders)
